# silenceofthelambs

./: .pylintrc  LICENSE  Makefile  README.md  build-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: pr_automerge.yml  python_publish.yml
silenceofthelambs/: __init__.py  auto.py  main.py
tests/: conftest.py  stubs.py  test_main.py
