[metadata]
name = silenceofthelambs
description = Decrypt shush-like KMS-encrypted strings stored in the environment
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
author = Sam Jarrett
author_email = sam@samjarrett.com.au

[options]
python_requires = >=3.9
include_package_data = True
packages = find:
tests_require =
    file: requirements.txt
setup_requires =
    setuptools_scm

[options.extras_require]
with_boto3 = boto3 >= 1.17.0

[options.packages.find]
exclude =
    tests
